# zuspec-sv

./: CMakeLists.txt  README.md  count.sh  ivpm.yaml  pytest.ini  setup.py
.github/workflows/: ci.yml
docs/: ActorExecutor.md  ExecNotes.md  PackageNotes.md  TODO.md
python/: core.pyx
python/zsp_ext_sv/: __init__.py
python/zsp_ext_sv/generator/: cmd_generate_sv.py  gen_data_type.py  gen_get_ref_val.py  gen_set_ret_val.py
python/zsp_sv/: __dfm__.py  __ext__.py  __init__.py  __main__.py  core.pxd  decl.pxd  flow.dv  pkginfo.py
python/zsp_sv/pytest_fv/: __init__.py  task_gen_sv_actor.py
scripts/: build_linux.sh  run_tests.sh
src/: Actor.cpp  Actor.h  CMakeLists.txt  EvalBackendProxy.cpp  EvalBackendProxy.h  Factory.cpp  Factory.h  MarkerListener.cpp  TaskGenerateExecModelCoreMethodCall.h  ZuspecSv.cpp  ZuspecSv.h  ZuspecSvDpiImp.h
src/dpi/: Actor.cpp  CMakeLists.txt  EvalBackendProxy.h  MarkerListener.h  ZuspecSv.h  ZuspecSvDpiImp.h
src/include/zsp/sv/: FactoryExt.h  IFactory.h  solve_compset_c.svh  zuspec.sv  zuspec_sv.core
src/include/zsp/sv/zsp_sv/: action_c.svh  action_constraint_base_c.svh  action_constraint_c.svh  action_handle_base_c.svh  action_handle_c.svh  action_handle_type_c.svh  action_init_c.svh  action_type_c.svh  activity_builder_c.svh  activity_c.svh  activity_ctxt_c.svh  activity_ctxt_par_branch_c.svh  activity_ctxt_par_c.svh  activity_ctxt_root_c.svh  activity_ctxt_seq_c.svh  activity_listener_c.svh  activity_par_c.svh  activity_proxy_c.svh  activity_scope_c.svh  activity_sel_c.svh  activity_seq_c.svh  activity_traverse_base_c.svh  activity_traverse_c.svh  activity_traverse_compound_c.svh  activity_type_c.svh  activity_type_traverse_handle_c.svh  activity_visitor_c.svh  actor_base_c.svh  actor_c.svh  actor_t_c.svh  addr_claim_base_s.svh  addr_handle_t.svh  addr_region_base_s.svh  addr_region_s.svh  addr_space_base_c.svh  addr_trait_s.svh  array_c.svh  backend_api.svh  channel_c.svh  component_c.svh  (+60 more)
tests/: runit.sh  test.pss  top.sv
tests/sv/: bitwuzla  resource.sv  resource.sv.sav  tmp  tmp.in  tmp.out  transcript
tests/sv/obj_dir/: Vresource  Vresource.cpp  Vresource.h  Vresource.mk  Vresource__ALL.cpp  Vresource__ALL.d  Vresource__Syms.cpp  Vresource__Syms.h  Vresource___024root.h  Vresource___024root__DepSet_h6abd2bda__0.cpp  Vresource___024root__DepSet_h81e32d44__0.cpp  Vresource___024root__DepSet_h81e32d44__0__Slow.cpp  Vresource___024root__DepSet_ha2097f72__0__Slow.cpp  Vresource___024root__Slow.cpp  Vresource__main.cpp  Vresource__pch.h  (+30 more)
tests/unit/: disabled_test_data_type_array.py  disabled_test_data_type_init.py  flow.dv  gen_sv_actor.py  sim_util.py  simple_test_flow.py  test_activity.py  test_base.py  test_buffer.py  test_comp_init.py  test_comp_methods.py  test_constraints.py  test_data_type_array.py  test_data_type_list.py  test_data_types.py  test_exec_stmts.py  test_executors.py  test_fields.py  test_flow_objects.py  test_function_static.py  test_import_api.py  test_mem_access.py  test_parse.py  test_refcount.py  test_registers.py  test_smoke.py  test_stdlib_io.py  test_struct_type.py
(+25 files in other folders)
